# Oxidroid

./: Cargo.toml  README.md  install.sh  trace.txt
.github/workflows/: release.yml
src/: app.rs  collector.rs  explorer.rs  input.rs  main.rs  settings.rs  types.rs  utils.rs
src/ui/: header.rs  mod.rs
src/ui/tabs/: battery.rs  cpu.rs  memory.rs  mod.rs  network.rs  overview.rs  processes.rs  settings.rs  storage.rs
