[package]
name = "termux-monitor"
version = "0.1.0"
edition = "2021"
description = "Termux System Monitor - Modern TUI Dashboard"

[[bin]]
name = "termux-monitor"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.27"
sysinfo = "0.32"
chrono = "0.4"
anyhow = "1.0"

[profile.release]
opt-level = 3
strip = true
lto = true
